Improve REST documentation with examples of retrieval form for ad-hocs, improve documents organisation, fix building project with jdk11 and maven; #http-88